--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: Imran's Notes
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Imran's random notes on ruby, go, and random computer related topics
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: imranwraja
+github_username:  imranraja85
 
 # Build settings
 markdown: kramdown
